--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,12 +5,12 @@ background:none;
 
 .navbar .nav > li > a {
   color:white;
-  font-size:20px;
+  font-size:1.5em;
 }
 
 .navbar .nav > li > a:hover {
   color:white;
-  font-size:20px;
+  font-size:1.5em;
   background:#e74c3c;
 }
 .nav { padding:20px;}
@@ -39,7 +39,7 @@ background:none;
 
 .main{ height:650px; 
        background:url("coffee.jpg");
-	   background-position:center;
+	  /* background-position:center; */
 	   background-size:cover;
 	   max-width:100%;
 					
