--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,6 @@
+  body {
+        overflow-x: hidden !important;
+    }
 
 .navbar  {
 background:none;
@@ -13,7 +16,9 @@ background:none;
   font-size:1.5em;
   background:#e74c3c;
 }
-.nav { padding:20px;}
+.nav { padding:20px; 
+       
+	 }
 
 .nav > li { border:1px solid white;
             margin-right:20px;
@@ -35,15 +40,13 @@ background:none;
   background:white;
   margin-left:10px;}
 
-.icon-bar{ background-color:red;}
+.icon-bar{ background-color:white;}
 
 .main{ height:650px; 
        background:url("coffee.jpg");
 	  /* background-position:center; */
 	   background-size:cover;
-	   max-width:100%;
-					
-		  }  
+	  }  
 
 		  
 .quote{ color:white !important;
@@ -58,12 +61,57 @@ background:none;
 		
 .second{ background:#e74c3c!important;
          color:white;
-		 height:610px;
+		 height:610px;		 
        }
+.third{ background:#1abc9c !important;
+         color:white;
+		 height:650px;
+       }
+	   
+.fourth{ background:#1abccc !important;
+         color:white;
+		 height:610px;
+       }	   
+#about{ margin-top:208px;}	 
+ 
 
 .headings{ color:white !important;
-          margin:50px 500px 0px 500px;
-		}	   
+          margin:20px 500px 0px 500px;
+		}
+
+.about-text{ color:#000;}
+
+.connect-icons{ 
+                width:100px;
+				border:2px solid white;
+				border-radius:20%;
+				background:white;
+				margin:10px;
+				display:inline-block;
+			 }	 
+
+.locate{ 
+         margin:0 auto;
+         margin-top:200px;
+         margin-left:400px;		 
+	   }			 
+
+	   
+.footer{ position:fixed;
+		 bottom:0;
+		 height:40px;
+		 text-align:center;
+		 width:100%;
+		 background:rgba(0, 0, 0,0.96);
+		 color:white;
+  } 	 
+	   
+	   ::-webkit-scrollbar {
+        width:0px;
+}
+	   
+	   
+	   
 @media only screen and (max-width:500px)
 {
 	.logo {  border-radius:50%;
@@ -88,7 +136,26 @@ background:none;
 		}
 		
     .name { 
-	margin-top:30px;
-	font-size:2em !important;
-  }		
+	margin-top:10px;
+	font-size:1.1em !important;  }		
+
+  
+  .main{ height:550px;
+        
+       background:url("coffee.jpg");
+	  /* background-position:center; */
+	   background-size:cover;					
+		  }  
+		  body {
+        overflow-x: hidden !important;
+    }
+    .container {
+        max-width: 100% !important;
+        overflow-y: hidden !important;
+    }
+	  
+.nav { padding:20px; 
+       background:rgba(0,0,0,0.3);
+	   border-radius:3px;
+	 }
 }
