--- a/css/master.css
+++ b/css/master.css
@@ -4,7 +4,7 @@ body{
 }
 .jumbotron{
   width: 100%;
-  height: 600px;
+  height: 95vh;
   background:black !important;
 }
 
@@ -13,6 +13,38 @@ body{
  color: white !important;
  font-family: 'Raleway', sans-serif;
 }
+.portname{
+  color: white !important;
+  font-family: 'Raleway', sans-serif;
+  font-size: 40px !important;
+}
+.port-skill{
+  color: white;
+  font-family: 'Raleway', sans-serif;
+  font-size: 30px;
+}
+
+.line{
+   width: 150px;
+}
+
+.port-skill-text{
+  color:black;
+  font-family: monospace;
+}
+
+.project{
+  border:2px solid white !important;
+  margin-left:8px;
+}
+.send{
+
+  background: white;
+  padding: 1px;
+  color:black;
+  font-family: monospace;
+  font-size: 20px !important;
+}
 
 .fname{
    font-family: 'Raleway', sans-serif;
@@ -20,7 +52,7 @@ body{
 }
 
 .nav{
-  padding:5px;
+  padding:1px;
    font-family: 'Raleway', sans-serif;
    font-weight: bolder;
    font-size: 1.3em;
@@ -59,4 +91,9 @@ body{
 
 hr{
   border: 2.5px solid white !important;
+}
+
+.img{
+  margin-left: 100px;
+  margin-top: 20px;
 }
