--- a/css/master.css
+++ b/css/master.css
@@ -20,10 +20,10 @@ header {
   bottom: 30;
   font-size: 3vmin; }
   header .logo {
-    background-image: url("../images/bg.gif");
+    background-image: url("../images/logo.jpg");
     background-position: center;
     background-size: contain;
-    height: 80px;
+    height: 12vh;
     padding: 10px;
     background-repeat: no-repeat; }
   header ul {
@@ -117,7 +117,7 @@ header {
   background: #df2029; }
   .about p {
     font-size: 6vmin;
-    font-family: cursive;
+    font-family: 'Raleway';
     color: rgba(255, 255, 255, 0.8);
     width: 50%; }
   .about .loveto {
@@ -274,8 +274,8 @@ header {
     text-align: center;
     margin: 0 auto;
     font-size: 10vmin;
+    color: white;
     font-family: 'Raleway';
-    color: rbga(0, 0, 0, 0.5);
     letter-spacing: 2vmin; }
 
 .contact-name {
@@ -333,8 +333,10 @@ header {
     align-items: center;
     font-size: 4.7vmin; }
     header .logo {
-      height: 20px;
-      width: 15%; }
+      width: 8vw;
+      height: 8vh;
+      background-size: contain;
+      background-position: center; }
     header nav {
       display: none; }
     header .mobile-toggle {
@@ -344,7 +346,7 @@ header {
     margin-left: 0; }
     .about p {
       font-size: 6vmin;
-      font-family: cursive;
+      font-family: 'Raleway';
       color: rgba(255, 255, 255, 0.8); }
 
   .name {
