--- a/css/master.css
+++ b/css/master.css
@@ -103,7 +103,7 @@ header {
   font-size: 9vmin;
   text-align: center;
   letter-spacing: 3.2vmin;
-  background: rgba(4, 0, 0, 0.5); }
+  background: rgba(4, 0, 0, 0.2); }
   .name h1 {
     margin: 0 auto;
     margin-top: 100px; }
@@ -379,6 +379,26 @@ header {
     margin: 0; }
     .social img {
       height: 8vh;
-      margin-left: 5px; } }
+      margin-left: 5px; }
+
+  .parallax-top {
+    height: 100vh;
+    width: 100%;
+    color: white;
+    background-image: url("../images/header.jpg");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: inherit; }
+
+  .parallax-bottom {
+    height: 60vh;
+    width: 100%;
+    color: white;
+    background-image: url("../images/bottom.jpg");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: inherit; } }
 
 /*# sourceMappingURL=master.css.map */
