--- a/css/master.css
+++ b/css/master.css
@@ -89,7 +89,7 @@ header {
   height: 60vh;
   width: 100%;
   color: white;
-  background-image: url("../images/bottom.jpg");
+  background-image: url("../images/header.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
