--- a/css/master.css
+++ b/css/master.css
@@ -76,7 +76,7 @@ header {
       text-align: center; }
 
 .parallax-top {
-  height: 500px;
+  height: 100vh;
   width: 100%;
   color: white;
   background-image: url("../images/header.jpg");
@@ -86,7 +86,7 @@ header {
   background-attachment: fixed; }
 
 .parallax-bottom {
-  height: 600px;
+  height: 100vh;
   width: 100%;
   color: white;
   background-image: url("../images/header.jpg");
@@ -388,8 +388,7 @@ header {
     background-image: url("../images/header.jpg");
     background-position: center;
     background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: inherit; }
+    background-repeat: no-repeat; }
 
   .parallax-bottom {
     height: 60vh;
@@ -399,6 +398,6 @@ header {
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    background-attachment: inherit; } }
+    } }
 
 /*# sourceMappingURL=master.css.map */
