--- a/css/master.css
+++ b/css/master.css
@@ -79,7 +79,6 @@ header {
   height: 100vh;
   width: 100%;
   color: white;
-  background-image: url("../images/header.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -104,7 +103,7 @@ header {
   height: 60vh;
   width: 100%;
   color: white;
-  background-image: url("../images/header.jpg");
+  background-image: url("../images/bottom1.jpg");
   background-position: 50% 50%;
   background-size: cover;
   background-repeat: no-repeat;
@@ -135,7 +134,7 @@ header {
   font-size: 8vmin;
   text-align: center;
   letter-spacing: 3.2vmin;
-  background: rgba(4, 0, 0, 0.25); }
+  background: rgba(0, 0, 0, 0.2); }
   .name figcaption {
     font-size: 3vmin;
     letter-spacing: 1vmin; }
@@ -159,7 +158,7 @@ header {
   .about p {
     font-size: 6vmin;
     font-family: 'Raleway';
-    color: rgba(255, 255, 255, 0.8);
+    color: rgba(255, 255, 255, 0.9);
     width: 50%; }
   .about .loveto {
     display: inline;
@@ -174,36 +173,14 @@ header {
       width: 46%; }
     .about .loveto img:hover {
       background: white;
-      animation: abhi 2s linear;
-      -webkit-animation: abhi 2s linear;
-      -moz-animation: abhi 2s linear; }
-@-webkit-keyframes abhi {
-  0% {
-    -webkit-transform: scale(1, 1); }
-  100% {
-    -webkit-transform: scale(1.2, 1.2); }
-  20% {
-    -webkit-transform: scale(1.2, 1.2); } }
-@-moz-keyframes abhi {
-  0% {
-    -moz-transform: scale(1, 1); }
-  100% {
-    -moz-transform: scale(1.2, 1.2); }
-  20% {
-    -moz-transform: scale(1.2, 1.2); } }
-@keyframes abhi {
-  0% {
-    transform: scale(1, 1); }
-  100% {
-    transform: scale(1.2, 1.2); }
-  20% {
-    transform: scale(1.2, 1.2); } }
+      transform: scale(1.2); }
+
 .portfolio {
   display: block;
   min-height: 70vh;
   margin-left: 20vh;
   padding: 20px;
-  background-image: url("../images/bottom1.jpg");
+  background: rgba(228, 241, 254, 0.2);
   background-position: center;
   background-size: cover;
   background-attachment: fixed; }
@@ -321,6 +298,10 @@ header {
     color: white;
     font-family: 'Raleway';
     letter-spacing: 2vmin; }
+  .design .showcase div {
+    background-image: url("../images/header.png");
+    height: 200px;
+    width: 200px; }
 
 .contact-name {
   display: flex;
@@ -354,10 +335,14 @@ header {
   min-height: 15vh;
   margin-left: 20vh;
   padding: 20px;
-  background: rgba(59, 89, 153, 0.1); }
+  background: white; }
   .social img {
     height: 12vh;
     margin-left: 50px; }
+  .social img:hover {
+    transform: scale(1.2);
+    background: white;
+    border-radius: 50%; }
   .social span {
     font-family: 'Raleway';
     font-size: 3vmin;
@@ -380,9 +365,10 @@ header {
       width: 8vw;
       height: 8vh;
       background-size: contain;
-      background-position: center; }
-    header nav {
-      display: block; }
+      background-position: center;
+      display: none; }
+    header nav ul {
+      display: none; }
     header .mobile-toggle {
       display: flex; }
 
@@ -431,7 +417,6 @@ header {
     height: 100vh;
     width: 100%;
     color: white;
-    background-image: url("../images/header.jpg");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -441,7 +426,6 @@ header {
     height: 60vh;
     width: 100%;
     color: white;
-    background-image: url("../images/bottom.jpg");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
