--- a/css/master.css
+++ b/css/master.css
@@ -415,7 +415,8 @@ header {
     background-image: url("../images/bottom1.jpg");
     background-repeat: no-repeat;
     background-position: center;
-    background-size: cover; }
+    background-size: cover;
+    background-attachment: scroll; }
     .portfolio h1 {
       font-size: 10vw !important;
       font-size: 2em; }
@@ -455,7 +456,8 @@ header {
     background-image: url("../images/header.jpg");
     background-position: center;
     background-size: cover;
-    background-repeat: no-repeat; }
+    background-repeat: no-repeat;
+    background-attachment: scroll; }
 
   .parallax-bottom {
     height: 100% !important;
@@ -464,7 +466,8 @@ header {
     background-image: url("../images/header.jpg");
     background-position: center;
     background-size: cover;
-    background-repeat: no-repeat; } }
+    background-repeat: no-repeat;
+    background-attachment: scroll; } }
 @media only screen and (min-width: 767px) and (max-width: 1023px) and (orientation: portrait) {
   .about p {
     font-size: 5.5vw;
@@ -530,7 +533,8 @@ header {
     background-image: url("../images/bottom1.jpg");
     background-repeat: no-repeat;
     background-position: center;
-    background-size: cover; }
+    background-size: cover;
+    background-attachment: scroll; }
     .portfolio h1 {
       font-size: 10vw !important;
       font-size: 2em; }
@@ -568,7 +572,8 @@ header {
     background-image: url("../images/header.jpg");
     background-position: center;
     background-size: cover;
-    background-repeat: no-repeat; }
+    background-repeat: no-repeat;
+    background-attachment: scroll; }
 
   .parallax-bottom {
     height: 100% !important;
@@ -577,6 +582,7 @@ header {
     background-image: url("../images/header.jpg");
     background-position: center;
     background-size: cover;
-    background-repeat: no-repeat; } }
+    background-repeat: no-repeat;
+    background-attachment: scroll; } }
 
 /*# sourceMappingURL=master.css.map */
