--- a/css/master.css
+++ b/css/master.css
@@ -407,7 +407,7 @@ header {
     margin: 0;
     width: 100%;
     height: 100%;
-    background-image: url("../images/bottom1.jpg");
+    background: grey;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -448,7 +448,7 @@ header {
     height: 100% !important;
     width: 100vw;
     color: white;
-    background-image: url("../images/header.jpg");
+    background: grey;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -458,11 +458,11 @@ header {
     height: 100% !important;
     width: 100%;
     color: white;
-    background-image: url("../images/header.jpg");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    background-attachment: none; } }
+    background-attachment: none;
+    background: grey; } }
 @media only screen and (min-width: 767px) and (max-width: 1023px) and (orientation: portrait) {
   .about p {
     font-size: 5.5vw;
@@ -525,7 +525,7 @@ header {
     margin: 0;
     width: 100%;
     height: 100%;
-    background-image: url("../images/bottom1.jpg");
+    background: grey;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -564,7 +564,7 @@ header {
     height: 100% !important;
     width: 100%;
     color: white;
-    background-image: url("../images/header.jpg");
+    background: grey;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -574,7 +574,7 @@ header {
     height: 100% !important;
     width: 100%;
     color: white;
-    background-image: url("../images/header.jpg");
+    background: grey;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
